use Path.of instead of Paths.get